objects/ccrz__E_Invoice__c.object
<CustomObject>
    <description>Invoice main object.  The invoice represents object against which payments may be made.</description>
    <fields>
        <fullName>BMS_CreateDate__c</fullName>
        <description>Order Create Date</description>
        <label>BMS Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BMS_DistributorAddressline__c</fullName>
        <label>BMS Distributor Addressline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMS_DistributorCity__c</fullName>
        <label>BMS Distributor City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMS_DistributorName__c</fullName>
        <label>BMS Distributor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMS_DistributorState__c</fullName>
        <label>BMS Distributor State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMS_Distributorpostalcode__c</fullName>
        <label>BMS Distributor postal code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMS_InvoiceDate__c</fullName>
        <label>BMS_InvoiceDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BMS_InvoiceNumber__c</fullName>
        <description>BMS OE invoice number</description>
        <label>BMS INVOICE NUMBER</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMS_InvoiceTotal__c</fullName>
        <label>BMS_InvoiceTotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMS_Invoice_No__c</fullName>
        <label>BMS Invoice No</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMS_Invoice_Num_Text__c</fullName>
        <formula>TEXT( BMS_InvoiceNumber__c )</formula>
        <label>BMS Invoice Num Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMS_PONumber__c</fullName>
        <label>BMS Purchase Order number</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMS_Refund_Invoice_Number__c</fullName>
        <label>BMS Refund Invoice Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMS_Refund_PDF_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BMS_Refund_PDF Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMS_TotalDiscount__c</fullName>
        <label>Invoice Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMS_paymenttype__c</fullName>
        <label>BMS payment type</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bolt_Intercompany__c</fullName>
        <formula>OR( ISPICKVAL(ccrz__BillTo__r.Type , &apos;Distributor Account&apos;), ISPICKVAL(ccrz__BillTo__r.Type,&apos;Distributor Branch Account&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bolt Intercompany</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreditMemo_Number__c</fullName>
        <label>CreditMemo Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Memo_need_to_create_for__c</fullName>
        <label>Credit Memo need to create for</label>
        <summaryFilterItems>
            <field>ccrz__E_InvoiceItem__c.ccrz__Type__c</field>
            <operation>equals</operation>
            <value>Item</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ccrz__E_InvoiceItem__c.IsCredited__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>ccrz__E_InvoiceItem__c.ccrz__Invoice__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Discount_Total__c</fullName>
        <label>Total Discounts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GOMS_Invoice_ID_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GOMS Invoice ID Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GOMS_Invoice_ID__c</fullName>
        <label>GOMS Invoice ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GomsDefinedPart__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GomsDefinedPart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ICInvoice_Date__c</fullName>
        <label>ICInvoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ICInvoice_Number__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ICInvoice_Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntercompanyCalled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IntercompanyCalled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Paid_By_User_Type__c</fullName>
        <label>Invoice Paid By User Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Paid_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Paid By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CC_Invoices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Revoked_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This will contain the name of Admin user who revoked the subscription</description>
        <label>Invoice Revoked By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CC_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Type__c</fullName>
        <label>Invoice Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Memo</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsBoltCreditMemoDone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsBoltCreditMemoDone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCredited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCredited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRecurringIntercompanyInvoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRecurringIntercompanyInvoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsReversalBoltJournalEntryDone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsReversalBoltJournalEntryDone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_GOMS_Integration_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is GOMS Integration Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_GOMS_Intercompany_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is GOMS Intercompany Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Note_Text__c</fullName>
        <label>OSM Note Text</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSMIntercompanyInvoiceReadyEmailSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OSMIntercompanyInvoiceReadyEmailSent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_Bypass_Flow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OSM Bypass Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_Child_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OSM Child Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CC Invoices (OSM Child Account)</relationshipLabel>
        <relationshipName>CC_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OSM_PDF_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PDF Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_SW_BMS_Refund_submit_order__c</fullName>
        <formula>ccrz__CCOrder__r.OSM_SW_Is_FSD_refund_Call_Done__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BMS Refund submit order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_SW_IsBoltARInvoiceDone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsBoltARInvoiceDone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_SW_IsIntercompanyInvoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsIntercompanyInvoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Is_Bolt_PO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Bolt PO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Is_Purchase_Done_By_Distributor__c</fullName>
        <formula>ccrz__CCOrder__r.Purchased_By_User_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purchase By User Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Is_Refund_FSD_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Refund FSD Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Is_Refund_Intercompany_Call_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Refund Intercompany Call Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Is_third_Party_BMS_Payment2__c</fullName>
        <formula>ccrz__CCOrder__r.OSM_SW_Is_third_Party_BMS_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>3rd party invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Vertex_Invoice_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vertex Invoice Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Vertex_Invoice_Reversal_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vertex Invoice Reversal Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_SW_isBoltJournalEntryDone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isBoltJournalEntryDone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Sales_Order_Invoice_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is created to map the original invoice number with cloned record.</description>
        <label>Original Sales Order Invoice Number</label>
        <referenceTo>ccrz__E_Invoice__c</referenceTo>
        <relationshipLabel>CC Invoices (Original Sales Order Invoice Number)</relationshipLabel>
        <relationshipName>CC_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Sales Order</label>
        <referenceTo>ccrz__E_Order__c</referenceTo>
        <relationshipLabel>Intercompany Invoices</relationshipLabel>
        <relationshipName>CC_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PDF_REMITTO_ADDRESS__c</fullName>
        <label>PDF_REMITTO_ADDRESS</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_On_Behalf_Of__c</fullName>
        <formula>IF(OSM_SW_Is_third_Party_BMS_Payment2__c,ccrz__CCOrder__r.ccrz__Account__r.Name,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purchase On Behalf Of</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchaser_Comments__c</fullName>
        <label>Purchaser Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recurring_Intercompany_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recurring Intercompany Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recurring_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recurring Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Refund_BMS_INVOICE_No__c</fullName>
        <label>Refund BMS INVOICE No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Send_Intercompany_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Intercompany Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <label>Sub Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Party_BMS_Customer_Name__c</fullName>
        <formula>IF(OSM_SW_Is_third_Party_BMS_Payment2__c,ccrz__CCOrder__r.ccrz__OriginatedCart__r.OSM_SW_IAM_Account_Id_For_Third_Party__c,&apos;&apos;)</formula>
        <label>Third Party BMS Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Sales_Amount__c</fullName>
        <label>Subtotal</label>
        <summarizedField>ccrz__E_InvoiceItem__c.ccrz__OriginalAmount__c</summarizedField>
        <summaryFilterItems>
            <field>ccrz__E_InvoiceItem__c.ccrz__Type__c</field>
            <operation>equals</operation>
            <value>Item</value>
        </summaryFilterItems>
        <summaryForeignKey>ccrz__E_InvoiceItem__c.ccrz__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Vertex_Tax__c</fullName>
        <label>Total Tax</label>
        <summarizedField>ccrz__E_InvoiceItem__c.ccrz__OriginalAmount__c</summarizedField>
        <summaryFilterItems>
            <field>ccrz__E_InvoiceItem__c.ccrz__Type__c</field>
            <operation>equals</operation>
            <value>Tax</value>
        </summaryFilterItems>
        <summaryForeignKey>ccrz__E_InvoiceItem__c.ccrz__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>XGomsDefinedPart__c</fullName>
        <formula>Original_Sales_Order__r.ccrz__CCSubscription__r.ccrz__SubscriptionProduct__r.GOMS_Defined_Part_number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>XGomsDefinedPart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__BillAddress__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Billing address for the invoice.</description>
        <label>Bill Address</label>
        <referenceTo>ccrz__E_ContactAddr__c</referenceTo>
        <relationshipLabel>CC Billing Invoices</relationshipLabel>
        <relationshipName>CCBillingInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__BillTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Account used for billing. Typically will be the same as Sold To Account.</description>
        <label>Bill To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CC Billing Invoices</relationshipLabel>
        <relationshipName>CCBillingInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__CCOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Order to which this invoice applies (optional).</description>
        <label>CC Order</label>
        <referenceTo>ccrz__E_Order__c</referenceTo>
        <relationshipLabel>CC Invoices</relationshipLabel>
        <relationshipName>CCInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Comments__c</fullName>
        <description>Invoice comments. Typically set at create time.</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CC Invoices</relationshipLabel>
        <relationshipName>CCInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__CurrencyCode__c</fullName>
        <description>B2B Commerce currency code.</description>
        <label>Currency Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__DateDue__c</fullName>
        <description>The date the invoice is due.</description>
        <label>Date Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__DateIssued__c</fullName>
        <description>The date the invoice was issued.</description>
        <label>Date Issued</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__InvoiceId__c</fullName>
        <description>Unique external identifier.</description>
        <externalId>true</externalId>
        <label>Invoice Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__OriginalAmount__c</fullName>
        <description>The original amount of the invoice. Once set this should not be changed. Could be negative or positive.</description>
        <label>Original Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__PaidAmount__c</fullName>
        <formula>ccrz__OriginalAmount__c - ccrz__RemainingAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__ParentInvoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to summary parent invoice.</description>
        <label>Parent Invoice</label>
        <referenceTo>ccrz__E_Invoice__c</referenceTo>
        <relationshipLabel>Child Invoices</relationshipLabel>
        <relationshipName>ChildInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__RemainingAmount__c</fullName>
        <description>The remaining amount of the invoice. As payments are applied this number will typically reduce (or increase for credits as they are applied to the customer account).</description>
        <label>Remaining Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__SoldAddress__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Sold To address for the invoice.</description>
        <label>Sold Address</label>
        <referenceTo>ccrz__E_ContactAddr__c</referenceTo>
        <relationshipLabel>CC Sold Invoices</relationshipLabel>
        <relationshipName>CCSoldInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__SoldTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Sold To Account to which this invoice applies.</description>
        <label>Sold To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CC Invoices</relationshipLabel>
        <relationshipName>CCInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Status__c</fullName>
        <description>The current implementation defined status of the invoice. E.g. Open, Closed.</description>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Storefront__c</fullName>
        <description>The storefront associated with this invoice.</description>
        <label>Storefront</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Terms__c</fullName>
        <description>The payment terms of the invoice, e.g. Net 15.</description>
        <label>Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Type__c</fullName>
        <description>E.g. Credit Note, Debit Note, etc.</description>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User reference</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CCInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dbu_Tracking_Number__c</fullName>
        <label>dbu Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CC Invoice</label>
    <listViews>
        <fullName>All_Invoices</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>ccrz__BillTo__c</columns>
        <columns>ccrz__OriginalAmount__c</columns>
        <columns>ccrz__CCOrder__c</columns>
        <columns>ccrz__Status__c</columns>
        <columns>Payment_Method__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BMS_paymenttype__c</field>
            <operation>notEqual</operation>
            <value>po</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>9/1/2021 12:00 AM</value>
        </filters>
        <label>All Invoices</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>I-{0000000000}</displayFormat>
        <label>CC Invoice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Invoices</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>